omni/tests/goldens/types/unknown_type_15.err
tests/goldens/types/unknown_type_15.omni:1:1: error: type mismatch: cannot assign int to Mystery15
     1 | let value15:Mystery15 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery15 or change the variable type to int
