omni/tests/goldens/types/unknown_type_15.omni
let value15:Mystery15 = 1
